Finally resolve nav problem on mobile

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -5,17 +5,14 @@
     > .list
         list-style: none
         margin: 0
-        padding: 0 13px 0
+        padding: 0 0px 0
 
         > .item
             display: inline-block
-            @media (max-width : 500px)
+            @media (max-width : 620px)
                 display: block
-        > .project
-            display: inline-block
 
-        > .item > .link,
-        > .project > .link
+        > .item > .link
             display: inline-block
             font-weight: 300
             text-decoration: none
